--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
  * It is advised that you do not edit anything in the build.gradle; unless you are sure of what you are doing
  */
 import com.gtnewhorizons.retrofuturagradle.mcp.InjectTagsTask
-import org.jetbrains.changelog.Changelog
+//import org.jetbrains.changelog.Changelog
 import org.jetbrains.gradle.ext.Gradle
 
 plugins {
@@ -13,7 +13,7 @@ plugins {
     id 'com.gtnewhorizons.retrofuturagradle' version '1.3.35'
     id 'com.matthewprenger.cursegradle' version '1.4.0' apply false
     id 'com.modrinth.minotaur' version '2.+' apply false
-    id 'org.jetbrains.changelog' version '2.2.0'
+    //id 'org.jetbrains.changelog' version '2.2.0'
 }
 
 apply from: 'gradle/scripts/helpers.gradle'
